[gd_scene load_steps=5 format=3 uid="uid://buw0m6frm5qum"]

[ext_resource type="Script" uid="uid://qrppfjmk8qd7" path="res://menus/player_setup.gd" id="1_xwnrc"]
[ext_resource type="PackedScene" uid="uid://dmqtdie76rgi8" path="res://menus/background.tscn" id="2_7oubm"]
[ext_resource type="Shader" uid="uid://b7frwxe5glvvi" path="res://menus/background.gdshader" id="3_vlvyf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mqmvs"]
shader = ExtResource("3_vlvyf")
shader_parameter/h = 0.0
shader_parameter/s = 0.788
shader_parameter/v = 1.0

[node name="PlayerSetup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xwnrc")

[node name="Background" parent="." instance=ExtResource("2_7oubm")]
material = SubResource("ShaderMaterial_mqmvs")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 69.0
offset_top = 10.0
offset_right = 166.0
offset_bottom = 33.0
text = "Player Setup"

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 45.0
offset_right = 232.0
offset_bottom = 111.0
columns = 2

[node name="HumanLabel" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Players"

[node name="HumanSpinBox" type="SpinBox" parent="GridContainer"]
layout_mode = 2
max_value = 4.0
value = 2.0

[node name="CPULabel" type="Label" parent="GridContainer"]
layout_mode = 2
text = "How many CPUs?"

[node name="CPUSpinBox" type="SpinBox" parent="GridContainer"]
layout_mode = 2
max_value = 2.0

[node name="ChangeControlsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 107.0
offset_right = 143.0
offset_bottom = 138.0
text = "Change Controls"

[node name="OKLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -126.0
offset_top = -24.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 0
grow_vertical = 0
text = "CHAR SELECT(Press Enter)"

[node name="ChangeControlsLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -42.0
offset_right = -36.0
offset_bottom = -19.0
grow_horizontal = 0
grow_vertical = 0
text = "Remap Controls (BUTTON)"

[node name="OKButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 134.0
offset_top = 122.0
offset_right = 241.0
offset_bottom = 153.0
text = "OK"

[connection signal="value_changed" from="GridContainer/HumanSpinBox" to="." method="_on_human_spin_box_value_changed"]
[connection signal="value_changed" from="GridContainer/CPUSpinBox" to="." method="_on_cpu_spin_box_value_changed"]
[connection signal="pressed" from="ChangeControlsButton" to="." method="_on_change_controls_button_pressed"]
[connection signal="pressed" from="OKButton" to="." method="_on_ok_button_pressed"]
